# Vara-Eth-bridge

eth-bridge/: hardhat.config.ts  package-lock.json  package.json
eth-bridge/contracts/: Bridge.sol  Token.sol
eth-bridge/scripts/: deployToken.ts
vara-bridge/: .gitignore  Cargo.toml
vara-bridge/bridge-vara/: Cargo.toml  build.rs
vara-bridge/bridge-vara/io/: Cargo.toml
vara-bridge/bridge-vara/io/src/: lib.rs
vara-bridge/bridge-vara/src/: lib.rs
